--- a/document/BackMatter/Conclusions.tex
+++ b/document/BackMatter/Conclusions.tex
@@ -2,17 +2,18 @@
     %Conclusiones   
     En el presente trabajo se definió la propuesta de un sistema para la 
 generación de resúmenes de enfrentamientos deportivos, independiente de la fuente de datos del dominio, a
-patir del análisis de caracteristicas comunes del conjunto de los deportes de enfrentamiento.
+partir del análisis de características comunes del conjunto de los deportes de enfrentamiento.
 
 Se presentó una propuesta de meta esquema general con el cual definir la estructura de entrada de
 los datos al sistema y se validó que es posible, a partir de dicho esquema,  definir un esquema de representación individual por deporte. 
+Se concibió una propuesta de diseño para los modelos de generación de un deporte en base a su esquema.
 El fútbol y el boxeo demostraron ser muestras útiles para la validación del sistema, por ser disciplinas muy diferentes en cuanto a su naturaleza de 
 ejecución y características.
 
- Se logró diseñar dos sistemas capaces de generar reportes basados en los eventos de estas dos
-disciplinas deportivas. Los sistemas, basándose  en un enfoque simple de reglas y plantillas, mostraron variabilidad en distintas ejecuciones frente a los 
-mismos datos, fidelidad en la información representada en la salida  respecto a los datos de entrada y garantizaron la correcta estructura gramatical del
-texto producido. De esta forma, cumplieron con el requerimiento básico de los sistemas de generación de GLN funcionales.
+    Se logró implementar un prototipo de sistemas con los modelos de generación para generar reportes basados en los eventos de estas dos
+disciplinas deportivas. Los modelos, siguiendo un enfoque simple de reglas y plantillas, mostraron variabilidad en distintas ejecuciones frente a los 
+mismos datos. A su vez, mostraron fidelidad en la información representada en la salida respecto a los datos de entrada y garantizaron la correcta estructura 
+del texto producido. De esta forma, cumplieron con el requerimiento básico de los sistemas de generación de GLN funcionales.
 
     
 
