--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -414,3 +414,9 @@
   pages={1--67},
   year={2020}
 }
+
+ @misc{ gulbranson, 
+ title={Python human name parser¶}, 
+ url={https://nameparser.readthedocs.io/en/latest/}, 
+ journal={Python Human Name Parser - Nameparser 1.1.2 documentation}, 
+ author={ Gulbranson, Derek}} 
