--- a/document/FrontMatter/Abstract.tex
+++ b/document/FrontMatter/Abstract.tex
@@ -1,7 +1,17 @@
 \begin{resumen}
-	Resumen en español
+	La Generación de Lenguaje Natural, como subcampo de la Inteligencia Artificial y la lingüística computacional, ha despertado cada vez mayor interés por su impacto en la 
+automatización de la generación de texto en distintos escenarios. Son varios los sistemas que buscan producir textos a partir de datos en el área del deporte. Aun así, 
+no abundan los sistemas desarrollados en idioma español y que sean independientes de la fuente de los datos. En el presente trabajo de tesis se propone un diseño de sistema 
+para la generación automática de resúmenes de enfrentamientos deportivos independiente de la fuente de datos. Se propone un esquema general para definir las entradas 
+específicas por deporte siguiendo una estructura de tuplas de conocimiento. Se presenta una propuesta de diseño para los modelos específicos de los deportes. La propuesta se valida 
+a través de la implementación de un sistema que genera resúmenes de partidos de fútbol y combates de boxeo. Los modelos de generación siguen el estándar basado en reglas y plantillas.
 \end{resumen}
 
 \begin{abstract}
-	Resumen en inglés
+	Natural Language Generation, as a subfield of Artificial Intelligence and computational linguistics, has aroused increasing interest due to its impact on the automation of text 
+generation in different scenarios. There are several systems that seek to produce texts from data in the area of sport. Even so, there are not many systems developed in Spanish and 
+that are independent of the source of the data. In this thesis work, a system design is proposed for the automatic generation of summaries of sports matches independent of the data 
+source. A general scheme is proposed to define the specific entries by sport following a structure of knowledge tuples. A design proposal for specific sports models is presented. The 
+proposal is validated through the implementation of a system that generates summaries of soccer matches and boxing matches. The generation models follow the standard based on rules and 
+templates.
 \end{abstract}
