--- a/document/BackMatter/Recomendations.tex
+++ b/document/BackMatter/Recomendations.tex
@@ -2,14 +2,17 @@
    % Recomendaciones
 
    A partir del análisis de los resultados obtenidos, se considera que el texto producido por los 
-modelos presentados pudiera ser dotado de mayor fluidez. Agregar un mecanismo 
+modelos presentados pudiera ser dotado de mayor fluidez. Agregar un mecanismo más potente
 para la generaci\'on y selección de expresiones de referencia, pudiera contribuir
-a \'esto, disminuyendo las repeticiones continuas del mismo nombre propio. 
-Aumentar el número de plantillas para distintos tipos de expresiones, 
+a esto, disminuyendo las repeticiones continuas del mismo nombre propio. Asimismo, la fluidez se puede mejorar definiendo reglas 
+específicas para la agregación de eventos iguales consecutivos, o que presenten relación de causalidad.
+También aumentar el número de plantillas para distintos tipos de expresiones, 
 contribuiría a aumentar la variabilidad de los modelos.
 
-Se recomienda comparar el enfoque seguido en este trabajo, con un enfoque que busque abstraer  y hacer las representaciones generales
-intradisciplinarias. 
+Se recomienda evaluar la adaptabilidad de los esquemas propuestos a una diversidad de fuentes proveedoras de datos para comprobar su 
+factibilidad en la práctica. Asimismo se recomienda buscar una propuesta para la generación automática de las tuplas de 
+conocimiento a partir de un esquema específico. 
+ 
 
 
 
