--- a/document/FrontMatter/Thanks.tex
+++ b/document/FrontMatter/Thanks.tex
@@ -1,3 +1,13 @@
 \begin{acknowledgements}
-    Agradecimientos
+    Quiero agradecer en primer lugar a mis padres, que han sido un ancla en todos los momentos de dificultad. Una 
+bioquímica y un telecomunicador pueden revisar trabajos de cibernética, aunque solo sea la ortografía mamá. 
+Un agradecimiento especial a mi Faby, por aguantar todos los momentos duros, por ser una inspiración, tu eres mi 
+ejemplo de que siempre hay que seguir por mal dadas que vengan. Agradecimiento inmenso a mi abuela, siempre en función 
+de que trabaje en la mayor calma posible. A mi hermano, por despertarme todos los días a las seis de la mañana, puedes 
+estar seguro de que otro año hubieras ido caminando al servicio. Agradecer a mis hermanos de la vida, Ale, David, 
+con ustedes al lado no hay moral que caiga. David, los apagones de tesis en el Naútico ya no nos los quita nadie, 
+para la historia quedan. A los amigos que me regaló esta facultad, Ana, Javier, agradecerles las mañanas, tardes, 
+noches, madrugadas compartidas, entre gente linda todo fluye mejor. Agradecer a todos mis amigos, familiares y profesores 
+que han formado parte de este camino, me es imposible mencionarlos a todos, los llevo conmigo.
+Agradecer a mis tutores Yudivián Almeida y Manuel Santiago por su guía y su disposición en todo momento.
 \end{acknowledgements}
