--- a/document/MainMatter/Implementation.tex
+++ b/document/MainMatter/Implementation.tex
@@ -1,9 +1,10 @@
-\chapter{Detalles de Implementación}\label{chapter:implementation}
+\chapter{Detalles de Implementación y Resultados}\label{chapter:implementation}
 
 Para la validación de la propuesta planteada a partir del esquema general de definición de los datos de entrada se concibió 
 un prototipo de sistema. Este implementa los modelos de generación para el fútbol y el boxeo y permite la interacción
  con los mismos. Para facilitar la interacción se implementó a su vez una interfaz gráfica sencilla. A continuación se presentan 
- detalles generales del sistema, funciones de interés y una presentación de la interfaz creada. Se utilizó \emph{python} como 
+ detalles generales del sistema, funciones de interés y una presentación de la interfaz creada. Finalmente se muestra el resultado del 
+ texto producido por los modelos implementados. Se utilizó \emph{python} como 
  lenguaje de programación.
  
 \section{Detalles generales del sistema}
@@ -24,7 +25,7 @@ su representación en cada uno de los valores se corresponda con la definición.
 de un esquema es el conjunto de valores admitidos por cada tipo principal (los tipos principales son los definidos en el 
 meta esquema general). A su vez, el método \emph{validate\_requeriments} se utiliza para validar si en el conjunto de entrada
  existe un conjunto minimal de los datos a partir de los cuales es posible la generación de texto. El m\'etodo \emph{name} devuelve 
- un nombre identificativo del esquema, debe ser único. La funcionalidad de \emph{validate} es una conjunción de los otros dos 
+ un nombre identificativo del esquema, que debe ser único. La funcionalidad de \emph{validate} es una conjunción de los otros dos 
  métodos de validación. 
 
 
@@ -77,7 +78,7 @@ Algoritmo principal
 
 
 
-\section{Funciones de realización lingüística}
+\subsection{Proceso de realización. Selección de plantillas}
 
    El proceso de realización lingüística se lleva a cabo utilizando un conjunto de funciones que permiten la expresión correcta de la información 
 en forma de oraciones. Para la representación de los datos los modelos consumen un sistema de plantillas hechas a mano. Un ejemplo de plantilla:
@@ -87,8 +88,7 @@ en forma de oraciones. Para la representación de los datos los modelos consumen
 	\end{center}
 
 Las expresiones entre $<$ $>$ son las ranuras de las plantillas y se completan utilizando la información procesada de la entrada. Para facilitar la interpretación, 
-a la expresión contenida entre $<$ \textit{clave} $>$ se le denominará clave de ranura. Para cada contexto se conciben varias plantillas que permitan realizar la información, 
-de forma tal que existan distintas opciones a la hora de expresar una misma idea.
+a la expresión contenida entre $<$ \textit{clave} $>$ se le denominará clave de ranura.
 
   El proceso de selección y llenado de las plantillas se realiza a través de la función \emph{select\_template} (Algoritmo de selección de plantilla). 
   Esta recibe como parámetros el conjunto de posibles plantillas a emplear, el género a realizar, así como un diccionario de representación de la 
@@ -96,10 +96,10 @@ información donde las llaves coinciden con las posibles claves de ranura de las
 
 
   Como el sistema presenta cierto grado de sensibilidad ante la ausencia de algunos datos, es posible que haya plantillas para las que alguna ranura no tenga un 
-valor real. La función \emph{\_is\_valid\_template} se utiliza para comprobar esto. El algoritmo selecciona aleatoriamente una plantilla del conjunto, si es válida, 
-se selecciona, si no, se descarta y se repite el proceso. Siempre se garantiza que habrá un al menos una plantilla que sea funcional, ya que presentará las ranuras 
+valor real. La función \emph{\_is\_valid\_template} se utiliza para comprobar esto. El algoritmo selecciona aleatoriamente una plantilla del conjunto; si es válida, 
+se selecciona, y si no, se descarta y se repite el proceso. Siempre se garantiza que habrá al menos una plantilla que sea funcional, ya que presentará las ranuras 
 correspondientes al subconjunto minimal que admite el sistema en ese contexto. Para comprobar la validez de la plantilla primero 
-se detectan las ranuras presentes en esta utilizando la siguiente expresión regular: \textit{(r'$<$ (?P$<$key$>$[a-zA-ZáéíóúÁÉÍÓÚ\_]*) $>$')}.
+se detectan las ranuras presentes en esta, utilizando la siguiente expresión regular: \textit{(r'$<$ (?P$<$key$>$[a-zA-ZáéíóúÁÉÍÓÚ\_]*) $>$')}.
   
 \begin{verbatim}
 Algoritmo de selección de plantilla
@@ -125,18 +125,27 @@ Algoritmo de selección de plantilla
 
   El método \emph{fill\_template} sustituye las ranuras de la plantilla por su valor real. Luego se pasa a desambiguar los términos de género. Como el sistema es 
 adaptable tanto a la modalidad femenina como masculina de los deportes, es necesario realizar las expresiones en el género correcto. Las ranuras de género están 
-presentes en algunas plantillas y tienen esta estructura: \$ clave \$. Estas ranuras se detectan igualmente utilizando una expresión regular similar a la vista 
-para las ranuras comunes. El caracter “@” también se utiliza dentro de las plantillas para hacer distinciones de género. Por ejemplo en la frase: \textit{
-amb@s se golpearon}, el “@” se sustituye por “a” o por “o” en dependencia del género. Este proceso se produce en la función \emph{disambiguate\_template}.
+presentes en algunas plantillas y tienen esta estructura: \$ \textit{clave} \$. Estas ranuras se detectan igualmente utilizando una expresión regular similar a la vista 
+para las ranuras comunes. El caracter “@” también se utiliza dentro de las plantillas para hacer distinciones de género. Este proceso se produce en la 
+función \emph{disambiguate\_template}.\\
 
+\textbf{Funciones lingüísticas}\\
 
-
-Otras funciones se utilizan para mejorar el carácter léxico gramatical de las oraciones producidas. La función \emph{ordinal} transforma expresiones numéricas 
-en su expresión ordinal (primer, segundo,  tercer, ..., vigésimo). La función numeral transforma un valor numérico en su expresión léxica (uno, dos, tres). Esta 
+    Otras funciones se utilizan para mejorar el carácter léxico gramatical de las oraciones producidas. La función \emph{ordinal} transforma expresiones numéricas 
+en su expresión ordinal (primer, segundo,  tercer, ..., vigésimo). La función \emph{numeral} transforma un valor numérico en su expresión léxica (uno, dos, tres). Esta 
 abarca los números desde el 1 al 20 y los múltiplos de 10 hasta 100. Una vez que todas las transformaciones sobre las plantillas han sido realizadas, la función 
 \emph{sentence\_lexical\_realization}, se utiliza para eliminar posibles errores, como espacios dobles, repetición de artículos (“el EL”), o corrige errores 
-transformando expresiones como “de el” en su forma correcta “del”.
+transformando expresiones como “de el” en su forma correcta “del”.\\
 
+
+\textbf{Generación de expresiones de referencia}\\
+
+    La generación se expresiones de referencia llevada a cabo se realiza a partir de los nombres propios de los individuos. Se utiliza la clase 
+\emph{ReferentialExpressionGenerator} que se instancia con la lista de todos los nombres presentes. A partir de estos, utilizando el paquete de \textit{python}, 
+\emph{nameparser} \brackcite{gulbranson}, se separa el nombre completo, en caso de que se brinde, en nombre y apellidos. Luego se determina qué referencias son ambiguas 
+y se descartan. Cada vez que se solicite referencias a un nombre específico, el generador determina si esta es una primera referencia o una referencia tardía. Para 
+las primeras referencias se emplea el nombre completo mientras que para segundas y terceras referencias se emplean los apellidos. En caso de muchas referencias a una 
+misma persona, el generador podría utilizar el nombre si este no genera ambigüedad.
 
 
 \section{Interfaz gráfica}
@@ -171,3 +180,74 @@ El sistema mostrará el texto producido en pantalla, luego de presionar el botó
     \caption{Interfaz del sistema}
     \label{fig_interfaz}
 \end{figure}
+
+\section{Resultados de la generación de texto}
+
+    Para la validación de la propuesta se concibieron los modelos de fútbol y boxeo. Ambos debían, en base a su diseño 
+generar resúmenes del evento a describir a partir de las tuplas de conocimiento del mismo. El texto debía mostrar cierto grado 
+de variabilidad en la salida. O sea, distintos textos ante la misma instancia de datos. A continuación se muestran resultados de 
+ambos modelos.\\
+
+    \textbf{Fútbol}\\
+
+  A continuación se muestran  dos variantes distintas producidas por el modelo para un mismo partido cuyo resultado reflejado por el 
+\textit{Diario AS} se puede ver en figura \ref{fig_rayomadrid}. Un extracto de las tuplas que conforman la entrada se presenta en la 
+figura \ref{fig_entradafutbol}.
+
+\begin{figure}[!]
+    \begin{center}
+        \includegraphics[scale=0.4]{Graphics/rayomadrid.png}
+    \end{center}
+    \caption{Muestra del resultado del partido y los goles por el \textit{Diario AS}}
+    \label{fig_rayomadrid}
+\end{figure}
+
+\begin{figure}[!]
+    \begin{center}
+        \includegraphics[scale=0.4]{Graphics/entradafutbol.png}
+    \end{center}
+    \caption{Extracto de las tuplas de entrada para el ejemplo del fútbol}
+    \label{fig_entradafutbol}
+\end{figure}
+
+\begin{itemize}
+    \item \textit{En el Estadio de Vallecas con la presencia de 13200 espectadores, Rayo Vallecano logró la victoria sobre Real Madrid 3 a 2.
+    Asistido por Fran García, un gol de Comesaña en el minuto cuatro deshizo el cero en el marcador adelantando a Rayo Vallecano. Luka Modric con un gol desde el punto de penal en el minuto 36 puso nuevamente las tablas. En el minuto cuarenta, un tiro preciso de Militao, a pase de Marco Asensio, dió la delantera en el marcador a Real Madrid. Cuando corría el minuto 43, un buen disparo de Álvaro García acabó con la ventaja de Real Madrid. En el minuto 66, con un gol de penal, Trejo puso a Rayo Vallecano en ventaja.
+    Trejo, centrocampista de Rayo Vallecano, fue el mvp del partido con un gol.}
+    \item \textit{Rayo Vallecano se llevó la victoria 3 a 2 frente a Real Madrid en el Estadio de Vallecas ante un público de 13200 espectadores.
+    En el cuatro, Comesaña con un tiro preciso declinó la balanza inicial a favor de Rayo Vallecano, el pase fue de Fran García. Luka Modric niveló el encuentro con un tiro ajustado preciso desde el punto de penal cuando corría el minuto 36. Cuando el crono marcaba el minuto cuarenta, con un disparo ajustado a pase de su compañero Marco Asensio, Militao deshizo la igualdad en favor de Real Madrid. Cuando el crono marcaba el minuto 43 una buena definición de Álvaro García acabó con la ventaja de Real Madrid. Trejo deshizo la igualdad en favor de Rayo Vallecano en el 66 con un gol desde los once metros.
+    Con una anotación, el centrocampista de Rayo Vallecano, Trejo, fue el jugador más destacado del partido.}
+\end{itemize}
+
+El modelo desarrollado es capaz de generar textos que siguen la estructura elegida y cumple con el objetivo de 
+crear un reporte de un partido de fútbol partiendo de la base de ser independiente de la fuente de datos utilizada. 
+\\
+
+    \textbf{Boxeo}\\
+
+
+%    El modelo es capaz de generar los reportes, basados en la estructura planteada con independencia de la fuente de datos. 
+%Se logró definir un esquema para el boxeo basado en el esquema general planteado. De la misma forma, durante la construcción de juegos 
+%de datos para probar la propuesta se detectó que no abundan los sitios que describen el boxeo en función de eventos detallados. No es 
+%objetivo de este trabajo evaluar la capacidad de encontrar datos que puedan ser adecuados al esquema propuesto. Se entiende será parte de 
+%futuros trabajos.
+
+    Se presentan dos muestras de reportes generados para una pelea entre Brian Mendoza y Jeison Rosario. Los datos se construyeron con el 
+visionado de un extracto de la pelea en \textit{youtube.com}. Un ejemplo de la entrada utilizada puede verse en la figura \ref{fig_entradaboxeo}.
+
+    \begin{figure}[!]
+        \begin{center}
+            \includegraphics[scale=0.4]{Graphics/entradaboxeo.png}
+        \end{center}
+        \caption{Extracto de las tuplas de entrada para el ejemplo del boxeo}
+        \label{fig_entradaboxeo}
+    \end{figure}
+
+    \begin{itemize}
+        \item \textit{En el ring del Minneapolis Armory en la categoría de peso medio, con un imparable gancho Brian Mendoza obtuvo la victoria por nocaut frente 
+        a Jeison Rosario en el quinto asalto.
+        Mendoza hizo besar la lona a Rosario con un derechazo en el segundo asalto.}
+        \item \textit{Ante los aficionados congregados en el Minneapolis Armory Brian Mendoza y Jeison Rosario cumplieron su cita en la categoría 
+        de peso medio. Con un gancho Brian Mendoza obtuvo la victoria al noquear a Jeison Rosario en el quinto asalto.
+        Mendoza puso en conteo de protección a Rosario con un inesperado puñetazo de derecha en el segundo asalto.}
+    \end{itemize}
